Add support for multiple files from the same component id
Signed-off-by: Appu <appu@google.com>